# corba

./: CMakeLists.txt  README.md
data/: data.json
idl/: account.idl  echo.idl  finance.idl  student_data.idl
inc/: account.hh  echo_client.hpp  echo_servant.hpp  student_data.hh
src/: CMakeLists.txt  accountSK.cc  echo_client.cc  eg3_clt.cc  eg3_impl.cc  student_dataSK.cc
tests/: CMakeLists.txt  test_corba_client.cpp  test_new_student_data_client.cpp  test_new_student_data_server.cpp
